# jupyter_playground

./: Altair.ipynb  Footprint.ipynb  Julia.ipynb  Learning Python3.ipynb  Pipfile  Rust.ipynb  pyproject.toml
.ipynb_checkpoints/: Altair-checkpoint.ipynb
