[tool.poetry]
name = "jupyter_playground"
version = "0.1.0"
description = "Playground for jupyter"
authors = ["kylepollina <kylepollina@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^1.2.6"
altair = "^4.0.1"
vega_datasets = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
